@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-23T16:06:15Z",
-  "count_outdated" : 1674,
-  "uniques_outdated" : 482,
-  "count" : 1706,
-  "uniques" : 499,
+  "timestamp" : "2022-07-24T00:36:19Z",
+  "count_outdated" : 1678,
+  "uniques_outdated" : 484,
+  "count" : 1710,
+  "uniques" : 500,
   "clones" : [
-    {
-      "timestamp": "2022-07-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-10T00:00:00Z",
       "count": 3,
@@ -84,10 +77,10 @@
     },
     {
       "timestamp": "2022-07-23T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
