@@ -3,11 +3,6 @@
   "uniques": 7,
   "clones": [
     {
-      "timestamp": "2022-07-09T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-07-10T00:00:00Z",
       "count": 3,
       "uniques": 1
@@ -59,8 +54,8 @@
     },
     {
       "timestamp": "2022-07-23T00:00:00Z",
-      "count": 2,
-      "uniques": 1
+      "count": 4,
+      "uniques": 2
     }
   ]
 }
