@@ -1,3 +1,10 @@
+2022-07-24T00:36:19Z:
+* notice: last 14d: unq all: 7 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 482 1674 / 499 1706
+* notice: next accum: outdated-unq outdated-all / unq all: 484 1678 / 500 1710
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [2022-07-09] / [2022-07-23]
+
 2022-07-23T16:06:15Z:
 * notice: last 14d: unq all: 7 32
 * notice: prev accum: outdated-unq outdated-all / unq all: 482 1674 / 499 1706
